After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779447 - Regression: smoothstreaming live seeking and duration
Regression: smoothstreaming live seeking and duration
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal blocker
: 1.11.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-02 00:31 UTC by Matthew Waters (ystreet00)
Modified: 2017-03-27 08:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mssdemux: only add live fragments after manifest fragments (4.08 KB, patch)
2017-03-02 00:34 UTC, Matthew Waters (ystreet00)
committed Details | Review

Description Matthew Waters (ystreet00) 2017-03-02 00:31:37 UTC
bug 755036 broke the fix in bug 774178 for live seeking.
Comment 1 Matthew Waters (ystreet00) 2017-03-02 00:34:12 UTC
Created attachment 347012 [details] [review]
mssdemux: only add live fragments after manifest fragments
Comment 2 Matthew Waters (ystreet00) 2017-03-27 08:18:02 UTC
commit 0a25fe289324bcac855c6fb6498f297556f90fb3
Author: Matthew Waters <matthew@centricular.com>
Date:   Wed Mar 1 20:51:43 2017 +1100

    mssdemux: only add live fragments after manifest fragments
    
    A live manifest may have a set (> LookAheadFragmentCount) of fragments
    that have already been served and are stored on the server, maybe
    indefinitely.  Adding the parsed live fragments after the manifest
    fragments breaks duration reporting and the seekable range.
    
    Fix by only adding parsed fragments outside the list of fragments which
    assumes that the fragment list in the manifest is accurate enough to not
    stray too far off what's in the retrieved data.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=779447